--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ DB_PORT=3306
 DB_NAME=factory
 DB_USER=root
 DB_PASSWORD=MUNIR123
+
+MONGO_URI=mongodb+srv://Munir:Munir@cluster0.pqnfyya.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
